Fix handling byte range request

Previously some syntactical valid byte ranges were not handled properly.
In example for bytes=0-0 (first byte) in request gupnp returned whole file
content. Also Content-Length was not set correctly. For bytes=33-66 in
request, Content-Length: 99 was set but there was only 33 bytes in response
body. This patch fix both issues.

https://bugzilla.gnome.org/show_bug.cgi?id=670518